provarAnt/00D1b0000000d5bEAA/objects/FormPos__Former_Position__c.object
<CustomObject>
    <description>Records a Contact&apos;s Account association, title and start and end dates.</description>
    <fields>
        <fullName>FormPos__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Former Contacts</relationshipLabel>
        <relationshipName>Former_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FormPos__Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Former Positions</relationshipLabel>
        <relationshipName>Former_Position</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FormPos__Current_Account__c</fullName>
        <formula>FormPos__Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormPos__Duration__c</fullName>
        <formula>(FormPos__End_Date__c - FormPos__Start_Date__c)/30</formula>
        <label>Duration (Months)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FormPos__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FormPos__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FormPos__Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Former Position</label>
    <nameField>
        <displayFormat>ID-{0000}</displayFormat>
        <label>Former Position ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Former Positions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>